@startuml db
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

package public <<Rectangle>> {
  entity games {
    *id : bigint <<generated>>
    --
    *name : text
    *status : game_status
    player_order : bigint[]
    current_player_id : bigint
  }
  
  entity players {
    *id : bigint <<generated>>
    --
    *name : text
  }
  
  entity participations {
    *game_id : bigint <<FK>>
    *player_id : bigint <<FK>>
    --
    *player_ready : boolean
    dice_quantity : smallint
    bet_quantity : smallint
    bet_quantity : smallint
  }
}

package private <<Rectangle>> {
  entity participation_cups {
    *id : uuid <<generated>>
    --
    *game_id : bigint <<FK>>
    *player_id : bigint <<FK>>
    *dice : smallint[]
  }
  
  entity game_turn {
    *game_id : bigint <<FK>>
    *turn_participation_cups_id : uuid <<FK>>
  }
}

games ||--o{ participations
players ||--o{ participations
games ||--o{ participation_cups
players ||--o{ participation_cups
game_turn ||--|| games
participation_cups ||--|| game_turn
@enduml